--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     }
 
     header {
-      background: url('WWW-hero-img.jpg') no-repeat center center/cover;
+      background: url('files/WWW-hero-img.jpg') no-repeat center center/cover;
       color: white;
       text-align: center;
       display: flex;
