--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Professional window cleaning and cleaning services in Genesee County, MI. Weekend Window Washer offers streak-free window washing, sanitation, and surface care for homes and businesses. Book your cleaning today!">
   <meta name="keywords" content="window cleaning, window washing, cleaning services, Genesee County, MI, residential cleaning, commercial cleaning, sanitation, surface care, Weekend Window Washer">
   <link rel="canonical" href="https://weekendwindowwasher.github.io/">
+  <link rel="shortcut icon" href="files/WWW-hero-img.jpg" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <!-- Open Graph for social sharing -->
   <meta property="og:title" content="Window Cleaning & Cleaning Services Genesee County MI | Weekend Window Washer">
@@ -14,12 +15,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://weekendwindowwasher.github.io/">
   <meta property="og:image" content="https://weekendwindowwasher.github.io/files/WWW-hero-img.jpg">
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Window Cleaning & Cleaning Services Genesee County MI | Weekend Window Washer">
-  <meta name="twitter:description" content="Professional window cleaning and cleaning services for homes and businesses in Genesee County, MI.">
-  <meta name="twitter:image" content="https://weekendwindowwasher.github.io/files/WWW-hero-img.jpg">
-  <style>
+    <style>
     :root {
       --primary-color: #dd1313;
       --text-color: #333;
