--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Professional window cleaning and cleaning services in Genesee County, MI. Weekend Window Washer offers streak-free window washing, sanitation, and surface care for homes and businesses. Book your cleaning today!">
   <meta name="keywords" content="window cleaning, window washing, cleaning services, Genesee County, MI, residential cleaning, commercial cleaning, sanitation, surface care, Weekend Window Washer">
   <link rel="canonical" href="https://weekendwindowwasher.github.io/">
-  <link rel="shortcut icon" href="files/WWW-hero-img.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="files/WWW_LOGO.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <!-- Open Graph for social sharing -->
   <meta property="og:title" content="Window Cleaning & Cleaning Services Genesee County MI | Weekend Window Washer">
